Looking good update 2

--- a/11/index.html
+++ b/11/index.html
@@ -15,20 +15,14 @@
             padding: 0;
             background-color: #f4f4f9;
         }
-        /* Header styling */
         
         h1 {
             text-align: center;
             font-size: 2.5rem;
             margin-top: 20px;
-            color: white;
-            /* White text for contrast */
+            color: #333;
             font-weight: bold;
             letter-spacing: 1px;
-            padding: 20px;
-            background-color: black;
-            /* Blue background */
-            border-radius: 5px;
         }
         /* Container for map and chart */
         
